--- a/Laboratorium 5/lab5_biox_class.ipynb
+++ b/Laboratorium 5/lab5_biox_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb21dd51f10>"
+       "<matplotlib.image.AxesImage at 0x7fa3eee719d0>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb21dccf370>"
+       "<matplotlib.image.AxesImage at 0x7fa3ee2cdaf0>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb21dcb79a0>"
+       "<matplotlib.image.AxesImage at 0x7fa3ee253580>"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb21dc247c0>"
+       "<matplotlib.image.AxesImage at 0x7fa3ee238850>"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
