--- a/Laboratorium 5/lab5_espu.ipynb
+++ b/Laboratorium 5/lab5_espu.ipynb
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11d2e60460>"
+       "<matplotlib.image.AxesImage at 0x7f4c5e5b8a30>"
       ]
      },
      "execution_count": 3,
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d6fad0397de41d3acbad39285de3e0c",
+       "model_id": "56d04c04629d4573933c2d86a0e17490",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11d2cf3df0>"
+       "<matplotlib.image.AxesImage at 0x7f4c5d9efc40>"
       ]
      },
      "execution_count": 6,
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11d21a0fa0>"
+       "<matplotlib.image.AxesImage at 0x7f4c5d9af070>"
       ]
      },
      "execution_count": 7,
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11cc4423a0>"
+       "<matplotlib.image.AxesImage at 0x7f4c584206a0>"
       ]
      },
      "execution_count": 8,
@@ -235,7 +235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "749dc326b6504baab6744d12f9cc340e",
+       "model_id": "3ee6dee9bcbc43688174b978ef716a7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11cc2c5910>"
+       "<matplotlib.image.AxesImage at 0x7f4c5d9d4940>"
       ]
      },
      "execution_count": 10,
@@ -329,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11cc358310>"
+       "<matplotlib.image.AxesImage at 0x7f4c582a90a0>"
       ]
      },
      "execution_count": 11,
@@ -362,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11cc251790>"
+       "<matplotlib.image.AxesImage at 0x7f4c58217c40>"
       ]
      },
      "execution_count": 12,
@@ -402,7 +402,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f11cc1cb5e0>"
+       "<matplotlib.image.AxesImage at 0x7f4c581a5670>"
       ]
      },
      "execution_count": 13,
