--- a/Laboratorium 5/Lab5_zadanie.ipynb
+++ b/Laboratorium 5/Lab5_zadanie.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f02cf3f3940>"
+       "<matplotlib.image.AxesImage at 0x7f88801029d0>"
       ]
      },
      "execution_count": 2,
@@ -192,7 +192,9 @@
     "from lab5_carbon_class import CarbonDetector\n",
     "from lab5_espu_class import EspuDetector\n",
     "from lab5_keto_class import KetoDetector\n",
-    "from lab5_probio_class import ProbioDetector"
+    "from lab5_probio_class import ProbioDetector\n",
+    "\n",
+    "pass"
    ]
   },
   {
